# mypda-chatbot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  biome.json  package.json  pnpm-lock.yaml  supabase-memory-backup.json  tsconfig.json
docker/: compose.yml
docs/: DISABLED_FEATURES.md
docs/skill-platform/: IMPLEMENTATION-PLAN.md  MEETING-NOTES.md  RESEARCH.md  ROADMAP.md  STANDARD-AND-ECOSYSTEM.md
mcp-templates/python/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
mcp-templates/python/server/: __init__.py  main.py  tools.py
mcp-templates/typescript/: .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
mcp-templates/typescript/src/: index.ts  tools.ts
messages/: en.json  es.json  fr.json  ja.json  ko.json  no.json  zh-TW.json  zh.json
scripts/: build-mcp-templates.sh  db-migrate.ts
src/app/: layout.tsx
src/app/store/: index.ts
src/components/: chat-bot.tsx  markdown.tsx  mcp-card.tsx  mcp-dashboard.tsx  mcp-editor.tsx  mcp-overview.tsx  message-parts.tsx  prompt-input.tsx  system-prompt-playground.tsx  thread-dropdown.tsx  tool-select-dropdown.tsx
src/components/admin/: admin-mcp-bulk-actions.tsx  model-catalog-editor.tsx
src/components/files/: files-view.tsx
src/components/layouts/: app-header.tsx  app-sidebar-artifacts.tsx  app-sidebar-mcp.tsx  app-sidebar.tsx  (+4 more)
src/i18n/: get-locale.ts
src/lib/: const.ts  ui-flags.ts
src/types/: chat-export.ts  mcp-artifact.ts  mcp.ts  memory.test.ts  memory.ts  skill.test.ts  skill.ts
(+106 files in other folders)
