[project]
name = "mypda-mcp-template"
version = "1.0.0"
description = "myPDA MCP 範本 (Python / Streamable HTTP)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.9.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
